--- a/src/components/ui/Hero.astro
+++ b/src/components/ui/Hero.astro
@@ -7,23 +7,7 @@ import SocialIcons from './SocialIcons.astro'
 const {fullName, title, institute, profilePicture} = Astro.props
 ---
 <div class='flex-1'>
-  <h1 class='text-4xl font-bold mb-4'>
-    Welcome! I'm <span class='text-secondary'>{fullName}</span>
-  </h1>
-  <p class='text-xl text-gray-600 mb-4'>{title}{institute ? ` at ${institute}` : ''}</p>
-  <p class='text-lg mb-6'>
-    Brief impactful description of your research focus and academic mission.
-    Highlight your key contributions and areas of expertise.
-  </p>
-  <div class='flex gap-4'>
-    <SocialIcons />
+  <div class='mb-4'>
+    <img src='/cognition-decision-lab-logo.png' alt='Cognition and Decision Lab Logo' class='w-full dark:invert' style='width: 100%; max-width: 100%; height: auto;' />
   </div>
-</div>
-<div class='size-72 lg:block hidden'>
-  <!-- Add your profile image -->
-  <Image
-    src={profilePicture}
-    alt={fullName}
-    class='w-full h-full mask mask-circle size-44'
-  />
 </div>
