--- a/src/components/ui/Hero.astro
+++ b/src/components/ui/Hero.astro
@@ -8,6 +8,6 @@ const {fullName, title, institute, profilePicture} = Astro.props
 ---
 <div class='flex-1'>
   <div class='mb-4'>
-    <img src='/cognition-decision-lab-logo.png' alt='Cognition and Decision Lab Logo' class='w-full dark:invert' style='width: 100%; max-width: 100%; height: auto;' />
+  <img src="/candd/cognition-decision-lab-logo.png" alt='Cognition and Decision Lab Logo' class='w-full dark:invert' style='width: 100%; max-width: 100%; height: auto;' />
   </div>
 </div>
