--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -12,7 +12,7 @@ import Layout from '@/layouts/Layout.astro'
       </p>
     <div class="flex gap-4">
       <a
-        href="/"
+        href="/candd/"
         class="btn btn-primary text-primary-content"
       >
         Go Home
