--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import ProfilePictures from '@/assets/profile_pictures.jpg'
 import Hero from '@/components/ui/Hero.astro'
 import Grid from '@/components/ui/Grid.astro'
 import ArticleList from '@/components/ui/ArticleList.astro'
+import NewsList from '@/components/ui/NewsList.jsx'
 
 const { fullName, title, institute, research_areas } = profile
 
@@ -53,12 +54,7 @@ const { fullName, title, institute, research_areas } = profile
 			<!-- Latest News Section -->
 			<div class='bg-base-200 rounded-lg p-6 shadow'>
 				<h2 class='text-2xl font-bold mb-4'>Latest News</h2>
-				<ul>
-					<li><strong>April 2025:</strong> Giulia's artwork was selected for the cover of Trends in Immunology for the April 2025 issue! <a href='https://www.cell.com/issue/S1471-4906%2824%29X0005-8'>Check it out</a>.</li>
-					<li><strong>March 2025:</strong> Giulia's work <a href='https://www.informationisbeautifulawards.com/showcase/7323-a-world-of-smiles'>A World of Smiles?</a> longlisted for the Information is Beautiful Awards 2024!</li>
-					<li><strong>January 2025:</strong> Giulia's paper "Model Selection for Behavioral Learning Data and Applications to Contextual Bandits" accepted to AISTATS 2025.</li>
-					<li><strong>January 2025:</strong> Mike's paper with Xuexin Wei, <a href='https://www.pnas.org/doi/10.1073/pnas.2407540122'>Representational Geometry Explains Puzzling Error Distributions in Behavioral Tasks</a>, published in PNAS.</li>
-				</ul>
+				<NewsList client:visible />
 			</div>
 		</aside>
 	</section>
