--- a/src/components/ui/Navbar.astro
+++ b/src/components/ui/Navbar.astro
@@ -18,30 +18,30 @@ const {fullName, title} = profile
 			<div class='mx-4 mt-8'>
 				<ul class='space-y-4 menu grow shrink menu-md overflow-y-auto'>
 					<li>
-						<a href={`${template.base}/`} class='text-lg'>Home</a>
+						<a href={`/candd/`} class='text-lg'>Home</a>
 					</li>
 					<li>
-						<a href={`${template.base}/people`} class='text-lg'>People</a>
+						<a href={`/candd/people`} class='text-lg'>People</a>
 					</li>
 					<li>
-						<a href={`${template.base}/projects`} class='text-lg'>Projects</a>
+						<a href={`/candd/projects`} class='text-lg'>Projects</a>
 					</li>
 					<li class="menu-dropdown">
   <details>
     <summary>
-      <a href={`${template.base}/papers`} class='text-lg'>Papers</a>
+      <a href={`/candd/papers`} class='text-lg'>Papers</a>
     </summary>
     <ul class="ml-4">
-      <li><a href={`${template.base}/papers#economic-decision-making`} class="text-base">Economic Decision Making with Limited Attention</a></li>
-      <li><a href={`${template.base}/papers#bounded-rationality`} class="text-base">Bounded Rationality in Macroeconomics</a></li>
-      <li><a href={`${template.base}/papers#behavioral-economic-links`} class="text-base">Links Between Behavioral and Economic Phenomena</a></li>
-      <li><a href={`${template.base}/papers#neuroeconomics`} class="text-base">Neuroeconomics</a></li>
-      <li><a href={`${template.base}/papers#other`} class="text-base">Other</a></li>
+      <li><a href={`/candd/papers#economic-decision-making`} class="text-base">Economic Decision Making with Limited Attention</a></li>
+      <li><a href={`/candd/papers#bounded-rationality`} class="text-base">Bounded Rationality in Macroeconomics</a></li>
+      <li><a href={`/candd/papers#behavioral-economic-links`} class="text-base">Links Between Behavioral and Economic Phenomena</a></li>
+      <li><a href={`/candd/papers#neuroeconomics`} class="text-base">Neuroeconomics</a></li>
+      <li><a href={`/candd/papers#other`} class="text-base">Other</a></li>
     </ul>
   </details>
 </li>
 					<li>
-						<a href={`${template.base}/links`} class='text-lg'>Links</a>
+						<a href={`/candd/links`} class='text-lg'>Links</a>
 					</li>
 				</ul>
 			</div>
