--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const { fullName, title, institute, research_areas } = profile
 
 	<!-- Lab Image -->
 	<section class='py-12 border-b'>
-		<img src='https://static.wixstatic.com/media/e1b5f3_568421fdf22b4aa083bddc1a6c06eba4~mv2.jpg/v1/crop/x_0,y_110,w_7008,h_4453/fill/w_1876,h_1192,al_c,q_90,usm_0.66_1.00_0.01,enc_avif,quality_auto/Columbia%20Economics%20-%20Headshots%20%26%20Group%20Photos%20-%2009-06-2024%20(502%20of%20652).jpg' alt='Lab Group Photo' class='w-full rounded shadow' />
+		<img src='candd/group-photo.avif' alt='Lab Group Photo' class='w-full rounded shadow' />
 	</section>
 
 </Layout>
