--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -14,14 +14,14 @@ const { title, description, image } = Astro.props
 <meta charset='utf-8' />
 <meta name='viewport' content='width=device-width,initial-scale=1' />
 <link
-	rel='icon'
-	type='image/svg+xml'
-	href='data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🎓</text></svg>'
+  rel='icon'
+  type='image/png'
+  href='/candd/favicon-crown.png'
 />
 <meta name='generator' content={Astro.generator} />
 
 <!-- Sitemap -->
-<link rel="sitemap" href={`${template.base}/sitemap-index.xml`} />
+<link rel="sitemap" href={`/candd/sitemap-index.xml`} />
 
 <!-- Canonical URL -->
 <link rel='canonical' href={canonicalURL} />
