--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -61,7 +61,7 @@ const { fullName, title, institute, research_areas } = profile
 
 	<!-- Lab Image -->
 	<section class='py-12 border-b'>
-		<img src='/group-photo.avif' alt='Lab Group Photo' class='w-full rounded shadow' />
+		<img src='/candd/group-photo.avif' alt='Lab Group Photo' class='w-full rounded shadow' />
 	</section>
 
 </Layout>
