--- a/src/pages/papers.astro
+++ b/src/pages/papers.astro
@@ -17,7 +17,13 @@ import papers from '../data/papers.json'
         <ul class="list-disc ml-8 space-y-2">
           {papers.filter(p => p.section === section && p.type === 'published').map(paper => (
             <li>
-              <span class="text-blue-600">"{paper.title}",</span> {paper.authors.join(', ')}{paper.journal ? `, ${paper.journal}` : ''}{paper.volume ? `, Volume ${paper.volume}` : ''}{paper.issue ? `, Issue ${paper.issue}` : ''}{paper.pages ? `, Pages ${paper.pages}` : ''}{paper.date ? `, ${paper.date}` : ''}
+              <span class="text-blue-600">
+                {paper.url ? (
+                  <a href={paper.url} target="_blank" rel="noopener noreferrer" class="hover:underline">"{paper.title}"</a>
+                ) : (
+                  `"${paper.title}"`
+                )}
+              </span>, {paper.authors.join(', ')}{paper.journal ? `, ${paper.journal}` : ''}{paper.volume ? `, Volume ${paper.volume}` : ''}{paper.issue ? `, Issue ${paper.issue}` : ''}{paper.pages ? `, Pages ${paper.pages}` : ''}{paper.date ? `, ${paper.date}` : ''}
             </li>
           ))}
         </ul>
@@ -25,7 +31,13 @@ import papers from '../data/papers.json'
         <ul class="list-disc ml-8 space-y-2">
           {papers.filter(p => p.section === section && p.type === 'working').map(paper => (
             <li>
-              <span class="text-blue-600">"{paper.title}",</span> {paper.authors.join(', ')}{paper.date ? `, ${paper.date}` : ''}
+              <span class="text-blue-600">
+                {paper.url ? (
+                  <a href={paper.url} target="_blank" rel="noopener noreferrer" class="hover:underline">"{paper.title}"</a>
+                ) : (
+                  `"${paper.title}"`
+                )}
+              </span>, {paper.authors.join(', ')}{paper.date ? `, ${paper.date}` : ''}
             </li>
           ))}
         </ul>
