--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,11 +3,16 @@ import Layout from '../layouts/Layout.astro'
 ---
 <Layout>
   <section class="py-12">
+    <style>
+      .space-y-12 p {
+        text-align: justify;
+      }
+    </style>
     <h1 class="text-4xl font-bold mb-8">Projects</h1>
     <div class="space-y-12">
       <div>
         <h2 class="text-2xl font-bold mb-4">Economic Decision Making with Limited Attention</h2>
-        <p>
+  <p style="text-align: justify;">
           Because attention is a scarce resource, people may not gather all relevant information before making an economic choice: shoppers may buy unnecessarily expensive products due to their failure to notice whether or not sales tax is included in stated price; purchasers may limit their attention to a relatively small number of websites when buying over the internet; firms may adjust their prices only infrequently in response to changing economic circumstances. Yet apparently mistaken choices may be the result of a rational trade off between the costs and benefits of information acquisition. As information becomes evermore plentiful, it becomes increasingly important to understand how people choose to what to attend. Much of the work of the lab focuses on developing and testing models of choice with limited attention, and understanding the implications of limited attention for economic behavior.
         </p>
       </div>
