--- a/src/components/ui/Hero.astro
+++ b/src/components/ui/Hero.astro
@@ -7,7 +7,7 @@ import SocialIcons from './SocialIcons.astro'
 const {fullName, title, institute, profilePicture} = Astro.props
 ---
 <div class='flex-1'>
-  <div class='mb-4'>
-  <img src="/candd/cognition-decision-lab-logo.png" alt='Cognition and Decision Lab Logo' class='w-full dark:invert' style='width: 100%; max-width: 100%; height: auto;' />
+  <div class='my-0'>
+    <img src="/candd/cognition-decision-lab-logo.png" alt='Cognition and Decision Lab Logo' class='w-full dark:invert' style='width: 100%; max-width: 100%; height: auto;' />
   </div>
 </div>
