--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -29,51 +29,15 @@ const {
 		{template.transitions && <ClientRouter /> }
 
 		<Head title={title} description={description} image={image} />
-
-
-
+		<!-- Modern font: Inter from Google Fonts -->
+		<link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet" />
 	</head>
 	<body>
 		<div class={`bg-base-100 drawer lg:drawer-open ${template.menu_left ? 'drawer-end' : ''}`}>
 			<input id='my-drawer' type='checkbox' class='drawer-toggle' />
 			<!-- Drawer content -->
             <div class='drawer-content bg-base-100'>
-				<div class='bg-base-100 z-50 text-base-content shadow-sm'>
-					<nav class='navbar'>
-						<div class='navbar-start'>
-							{template.menu_left &&
-								<DarkLightController/>
-								/* <ThemeSelector transition:persist /> */
-							}
-							<label for='my-drawer' class='btn btn-square btn-ghost lg:hidden'>
-								<BetterIcon>
-									<svg
-										xmlns='http://www.w3.org/2000/svg'
-										fill='none'
-										viewBox='0 0 24 24'
-										stroke-width='1.5'
-										class='size-6 stroke-current'
-									>
-										<path
-											stroke-linecap='round'
-											stroke-linejoin='round'
-											d='M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5'></path>
-									</svg>
-								</BetterIcon>
-							</label>
-						</div>
-						<div class='navbar-center lg:hidden text-lg font-black'>
-							{profile.title}
-							{profile.fullName}
-						</div>
-						<div class='navbar-end'>
-							{!template.menu_left &&
-								<DarkLightController/>
-								/* <ThemeSelector transition:persist /> */
-							}
-						</div>
-					</nav>
-				</div>
+				<!-- Top bar removed -->
                 <main class='p-8 pt-10 lg:pt-16 lg:max-w-5xl max-w-full mx-auto min-h-screen flex flex-col justify-between'>
 					<!-- Page content -->
 					<slot />
@@ -101,5 +65,6 @@ const {
 		margin: 0;
 		width: 100%;
 		height: 100%;
+	font-family: 'Nunito', system-ui, sans-serif;
 	}
 </style>
