--- a/src/pages/papers.astro
+++ b/src/pages/papers.astro
@@ -3,6 +3,11 @@ import Layout from '../layouts/Layout.astro'
 import papers from '../data/papers.json'
 ---
 <Layout>
+  <style>
+    section p, section li {
+      text-align: justify;
+    }
+  </style>
   {['economic-decision-making', 'bounded-rationality', 'behavioral-economic-links', 'neuroeconomics', 'other'].map(section => (
     <section class="py-12" id={section}>
       <h1 class="text-4xl font-bold mb-8">
