updated justified text to break words

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,7 +35,7 @@ const { fullName, title, institute, research_areas } = profile
 					<!-- About Section -->
 					<div class='about-section'>
 						<h2 class='text-2xl font-bold mb-4'>About</h2>
-									<p style="text-align: justify;">
+									  <p style="text-align: justify; word-break: break-word; hyphens: auto;">
 										The Cognition and Decision Lab is a joint venture among principal investigators
 										<a href='http://www.columbia.edu/~mw2230/'>Michael Woodford</a>,
 										<a href='http://www.columbia.edu/~md3405/'>Mark Dean</a> and
