--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -6,6 +6,8 @@ import Layout from '../layouts/Layout.astro'
     <style>
       .space-y-12 p {
         text-align: justify;
+        word-break: break-word;
+        hyphens: auto;
       }
     </style>
     <h1 class="text-4xl font-bold mb-8">Projects</h1>
