--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -56,7 +56,7 @@ const { fullName, title, institute, research_areas } = profile
 			</div>
 	<aside class='md:w-1/3 w-full text-left'>
 			<!-- Latest News Section -->
-			<div class='bg-base-200 rounded-lg p-6 shadow'>
+			<div class='bg-base-200 text-base-content rounded-lg p-6 shadow'>
 				<h2 class='text-2xl font-bold mb-4'>Latest News</h2>
 				<NewsList client:visible />
 			</div>
